--- a/css/styles.css
+++ b/css/styles.css
@@ -46,3 +46,18 @@ body{
 div.card-header a{
     color: black;
 }
+
+.carousel {
+    background: #512DA8;
+}
+
+.carousel-item {
+    height: 300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
