--- a/css/styles.css
+++ b/css/styles.css
@@ -65,3 +65,10 @@ div.card-header a{
 #section {
     visibility: hidden;
 }
+
+#carouselButton {
+    z-index: 1;
+    right: 0;
+    position: absolute;
+    bottom: 0;
+}
