--- a/css/styles.css
+++ b/css/styles.css
@@ -1,74 +1,50 @@
 .row-header {
-    margin: 0px auto;
-    padding: 0px auto;
+  margin: 0px auto;
+  padding: 20px 0px;
 }
-
-.row-content{
-    margin: 0px auto;
-    padding: 50px 0px 50px 0px;
-    border-bottom: 1px ridge;
-    min-height: 400px;
+.row-content {
+  margin: 0px auto;
+  padding: 50px 0px;
+  border-bottom: 1px ridge;
+  min-height: 400px;
 }
-
-.footer{
-    background-color: #D1C4E9;
-    margin: 0px auto;
-    padding: 20px 0px 20px 0px;
+.navbar-dark {
+  background-color: #512DA8;
 }
-
-.jumbotron{
-    padding: 50px 30px;
-    margin: 0px auto;
-    background-color: #9575CD;
-    color: floralwhite;
+.navbar-dark #loginModalLink {
+  cursor: pointer;
 }
-
-.address{
-    font-size: 80%;
-    margin: 0px;
-    color: #0f0f0f;
+.jumbotron {
+  margin: 0px auto;
+  padding: 50px 30px;
+  background-color: #9575CD;
+  color: floralwhite;
 }
-
-body{
-    padding: 50px 0 0 0;
+.modal-header {
+  background-color: #512DA8;
+  color: white;
 }
-
-.navbar-dark{
-    background-color: #512DA8;
+.modal-body {
+  background-color: #9575CD;
 }
-
-.tab-content{
-    border: 1px solid #ddd;
-    border-top: none;
-    padding: 10px;
-}
-
-div.card-header a{
-    color: black;
-}
-
 .carousel {
-    background: #512DA8;
+  background-color: #512DA8;
 }
-
-.carousel-item {
-    height: 300px;
+.carousel .carousel-item {
+  height: 300px;
 }
-
-.carousel-item img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 300px;
+.carousel .carousel-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 300px;
 }
-
-#section {
-    visibility: hidden;
+.carousel #carouselButton {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
-
-#carouselButton {
-    z-index: 1;
-    right: 0;
-    position: absolute;
-    bottom: 0;
+.footer {
+  background-color: #D1C4E9;
 }
